--- a/css/style.css
+++ b/css/style.css
@@ -5,40 +5,43 @@
 }
 
 .body {
+  padding:2em;
   background: url("../img/bg.jpg");
   min-height: 100vh;
   background-size: 100vw 100vh;
   background-repeat: no-repeat;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  justify-content: space-evenly;
+  align-items: flex-start;
 }
 
 #board {
   background: linear-gradient(rgb(236, 236, 114), rgb(158, 235, 158));
-  height: 800px;
+  height: 600px;
   width: 600px;
-  margin-right: 150px;
   border: 6px solid black;
   display: grid;
-  grid-template-rows: repeat(28, 1fr);
-  grid-template-columns: repeat(22, 1fr);
+  grid-template-rows: repeat(30, 1fr);
+  grid-template-columns: repeat(30, 1fr);
 }
 
-.head {
-  background-color: purple;
-  border-radius: 0.6rem;
-  border: 4px solid rgb(255, 123, 0);
+.snake-head {
+  background-color: #1a5408;
+  border-radius: 50%;
 }
 
-.snake {
-  background-color: rgb(255, 123, 0);
-  border-radius: 0.5rem;
-  border: 5px solid purple;
+.snake-body {
+  background-color: #39c113bc;
+  border-radius: 50%;
+}
+
+.snake-tail {
+  background-color: #24800ada;
+  border-radius: 50%;
 }
 
 .food {
-  background-color: red;
-  border-radius: 1rem;
-  border: 4px solid black;
+  height: 100%;
+  width: 100%;
+  object-fit: contain;
 }
